fix player name list being blue on iOS devices

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -568,6 +568,7 @@ input {
     border: none;
     background-color: transparent;
     font-size: 16px;
+    color: #000000;
 }
 
 /*
